fix: text now looks better on mobile devices

--- a/src/styles/ProjectsHeader.css
+++ b/src/styles/ProjectsHeader.css
@@ -16,6 +16,7 @@
 .projectsSubText {
     font-family: 'Tilt Neon', sans-serif;
     margin-top: 10px;
+    margin: 5px;
     color: #f5e218;
   }
 
